<resources>
    <string name="app_name">Cocktail Bar</string>
    <string name="my_cocktail">My cocktail</string>
    <string name="add_your_first_cocktail_here">
        <br>Add your first</br>
        <br>cocktail here</br></string>
    <string name="title">Title</string>
    <string name="cocktail_name">Cocktail Name</string>
    <string name="description">Description</string>
    <string name="recipe">Recipe</string>
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
    <string name="add_title">Add title</string>
    <string name="option_field">Option field</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="emptyList">The list of ingredients is empty</string>
</resources>