<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_head"
        style="@style/Text.Family.Head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_ingredient"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_head"
        style="@style/RoundEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_save"
        android:layout_margin="16dp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/til_title"
        app:layout_constraintBottom_toTopOf="@id/btn_cancel"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_cancel"
        android:layout_margin="16dp"
        android:text="@string/cancel"
        android:textColor="@color/btn"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>