<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/round_iv"
            android:layout_marginTop="64dp"
            android:src="@drawable/baseline_photo_camera_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/iv_photo"
            style="@style/RoundEditText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/til_title"
            style="@style/RoundEditText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiel_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_field"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toBottomOf="@id/til_description"
            app:layout_constraintLeft_toLeftOf="@id/til_title" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_field"
            app:layout_constraintLeft_toLeftOf="@id/tv_field"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_save"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintTop_toBottomOf="@id/tv_field"
            app:layout_constraintBottom_toBottomOf="@id/ll"
            app:layout_constraintLeft_toRightOf="@id/ll"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/ll"
            style="@style/RoundEditText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiel_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_fiel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_field"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toBottomOf="@id/til_recipe"
            app:layout_constraintLeft_toLeftOf="@id/til_title"
            app:layout_constraintBottom_toTopOf="@id/btn_save" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_save"
            android:layout_margin="16dp"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/btn_cancel"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_cancel"
            android:layout_margin="16dp"
            android:text="@string/cancel"
            android:textColor="@color/btn"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>